--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port:5050
-spring.datasource.url=jdbc:postgresql://localhost:5432/jr7
+spring.datasource.url=jdbc:postgresql://localhost:5432/party-management
 spring.datasource.username=postgres
 spring.datasource.password=0000
 spring.datasource.driver-class-name=org.postgresql.Driver
